div headline and addnew todo

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <h1 class="headline">Do<span class="h1-span-me">me</span><span class="h1-span-dot">.</span></h1>
     </nav>
     <script src="index.js"></script>
-    <div class="todo-div">
-        <h3>TO-DO List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-circle-plus fa-beat" style="--fa-animation-duration: 5s;color:#FF6262"></i></h3>
-
+    <div class="outer">
+        <div class="todo-div-headline">
+            <h3>TO-DO List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-circle-plus fa-beat" style="--fa-animation-duration: 5s;color:#FF6262"></i></h3>
+        </div>
+        <div class="todo-div-addnew">
+            <input type="text" id="fname" name="fname"><br>
+        </div>
     </div>
 </body>
 </html>
