--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <nav>
         <h1 class="headline">Do<span class="h1-span-me">me</span><span class="h1-span-dot">.</span></h1>
     </nav>
-    <script src="index.js"></script>
     <div class="outer">
         <div class="todo-div-headline">
             <h3>TO-DO List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-circle-plus fa-beat" style="--fa-animation-duration: 5s;color:#FF6262"></i></h3>
@@ -20,6 +19,10 @@
         <div class="todo-div-addnew">
             <input type="text" id="fname" name="fname"><br>
         </div>
+        <div class="todo-div-todo">
+            
+        </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
