--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!--Title:TODO App - HTML-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/aaac6a3201.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/aaac6a3201.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="main.css" />
     <title>TODO List - Harli Laçej</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <nav>
-        <h1 class="headline">Do<span class="h1-span-me">me</span><span class="h1-span-dot">.</span></h1>
+      <h1 class="headline">
+        Do<span class="h1-span-me">me</span><span class="h1-span-dot">.</span>
+      </h1>
     </nav>
     <div id="outer-div" class="outer">
-        <div class="todo-div-headline">
-            <h3>TO-DO List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-circle-plus fa-beat" style="--fa-animation-duration: 5s;color:#FF6262"></i></h3>
-        </div>
-        <div class="todo-div-addnew">
-            <input type="text" id="fname" name="fname"><br>
-        </div>  
-    </div>  
+      <div class="todo-div-headline">
+        <h3>
+          TO-DO
+          List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i
+            class="fa-solid fa-circle-plus fa-beat"
+            style="--fa-animation-duration: 5s;color:#FF6262"
+          ></i>
+        </h3>
+      </div>
+      <div class="todo-div-addnew">
+        <input type="text" id="fname" name="fname" /><br />
+      </div>
+    </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
