changes in index.js

--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
     </nav>
     <div id="outer-div" class="outer">
       <div class="todo-div-headline">
-        <h3>
-          TO-DO
-          List&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i
-            class="fa-solid fa-circle-plus fa-beat"
-            style="--fa-animation-duration: 5s;color:#FF6262"
-          ></i>
-        </h3>
+        <h3>TO-DO List<i class="fa-solid fa-circle-plus fa-beat" id="iconplus"></i></h3>
       </div>
       <div class="todo-div-addnew">
         <input type="text" id="fname" name="fname" /><br />
